load("@rules_cc//cc:defs.bzl", "cc_binary")

EXAMPLE_SRCS = glob(["example_*.cpp"])

[cc_binary(
    name = filename[:-4] + "_noexcept",
    srcs = [filename],
    deps = [
        "//:quill_noexcept",
    ],
) for filename in EXAMPLE_SRCS]

[cc_binary(
    name = filename[:-4],
    srcs = [filename],
    deps = [
        "//:quill",
    ],
) for filename in EXAMPLE_SRCS]
